contact form basic outline done

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,4 +1,13 @@
 ---
 layout: default
+permalink: /contact/
 ---
-<!-- Page Content -->
+<div class="container-fluid contact">
+  <div class="row-fluid">
+    <div class="col-sm-12">
+
+      {% include form.html %}
+
+    </div>
+  </div>
+</div>
