--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@ layout: default
   <div class="row-fluid" id="hero">
   </div>
 
-  <div class="container">
-    <div class="row boxes">
-    <div class="col-12 col-md-4 box-1">fasfldjflasjf</div>
-    <div class="col-12 col-md-4 box-2">sdfsdfdsfsdfa</div>
-    <div class="col-12 col-md-4 box-3">fdsfsafsdfasfsda</div>
+  <div class="container full-width-container">
+    <div class="row">
+    <div class="col-lg-4 col-md-4 col-sm-12 box-1">
+      <div class="overlay-effect h-100 w-100">
+        <div class="overlay-text">Our practice is dedicated to people who identify as  LGBTQAI++  as well people who are exploring aspects of their gender and sexuality under the LGBTQAI++ umbrella in a safe environment.
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-12 box-2">
+      <div class="overlay-effect h-100 w-100">
+        <div class="overlay-text">Finding direction, choosing meaningful and gainful  employment can be confusing and challenging, psychotherapy provides a platform for finding choices and peace.
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-12 box-3">
+      <div class="overlay-effect h-100 w-100">
+        <div class="overlay-text">
+          Many people in New York City suffer from anxiety, panic attacks and depression, we can help you navigating these overwhelming feelings.
+        </div>
+      </div>
+    </div>
   </div>
-  </div>
+  <div class="row section">
+      <div class="col-lg-6 col-md-6 col-sm-12 map">
+      <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=New%20York%2C%20NY%2C%20USA&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12 contact">
+      <p>Libertarian I'm an enormous man-child I'm kind of a genius I live in constant amazement of nature and the universe. Giving massages pics on request looking for a third are you really going to rule me out becausae of it? when I get drunk, at least once a day there's no such thing as a typical Friday night I'm too lazy to keep typing I may be somewhat jaded I am a hoarder, but only of top shelf stuff. On the first date Ayn Rand is probably a conspiracy I tend to be attracted to other shenanigans I do well dating.</p>
+    </div>
+    </div>
+
+  </div><!--  end full-width container -->
