--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,65 +3,71 @@ layout: default
 permalink: /about/
 ---
 <!-- Page Content -->
+
+
 <div class="container-fluid card-container">
+<div class="row-fluid header">
+  <div class="col-sm-12">
+    <h2>Who We Are</h2>
+  </div></div>
   <div class="row-fluid">
 
     <div class="card-deck">
 <div class="card" style="width: 18rem;">
-  <img src="https://picsum.photos/800" class="card-img-top" alt="...">
+  <img src="/assets/img/alana.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
+    <h5 class="card-title">Name</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Specialties</li>
   </ul>
   <div class="card-body">
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+    <a href="#" class="card-link">Contact</a>
+    <a href="#" class="card-link">Learn More</a>
   </div>
 </div>
   <div class="card" style="width: 18rem;">
   <img src="https://picsum.photos/800" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
+    <h5 class="card-title">Name</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Specialties</li>
   </ul>
   <div class="card-body">
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+    <a href="#" class="card-link">Contact</a>
+    <a href="#" class="card-link">Learn More</a>
   </div>
 </div>
 
   <div class="card" style="width: 18rem;">
-  <img src="https://picsum.photos/800" class="card-img-top" alt="...">
+  <img src="/assets/img/kate.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
+    <h5 class="card-title">Name</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Specialties</li>
   </ul>
   <div class="card-body">
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+    <a href="#" class="card-link">Contact</a>
+    <a href="#" class="card-link">Learn More</a>
   </div>
 </div>
 <div class="card" style="width: 18rem;">
   <img src="https://picsum.photos/800" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
+    <h5 class="card-title">Name</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Specialties</li>
   </ul>
   <div class="card-body">
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+    <a href="#" class="card-link">Contact</a>
+    <a href="#" class="card-link">Learn More</a>
   </div>
 </div>
 </div>
