--- a/_pages/about.html
+++ b/_pages/about.html
@@ -5,72 +5,60 @@ permalink: /about/
 <!-- Page Content -->
 
 
-<div class="container-fluid card-container">
+<div class="container">
 <div class="row-fluid header">
   <div class="col-sm-12">
     <h2>Who We Are</h2>
-  </div></div>
-  <div class="row-fluid">
-
-    <div class="card-deck">
-<div class="card" style="width: 18rem;">
-  <img src="/assets/img/alana.jpeg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Name</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">Specialties</li>
-  </ul>
-  <div class="card-body">
-    <a href="#" class="card-link">Contact</a>
-    <a href="#" class="card-link">Learn More</a>
   </div>
 </div>
-  <div class="card" style="width: 18rem;">
-  <img src="https://picsum.photos/800" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Name</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">Specialties</li>
-  </ul>
-  <div class="card-body">
-    <a href="#" class="card-link">Contact</a>
-    <a href="#" class="card-link">Learn More</a>
-  </div>
 </div>
 
-  <div class="card" style="width: 18rem;">
-  <img src="/assets/img/kate.jpeg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Name</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">Specialties</li>
-  </ul>
-  <div class="card-body">
-    <a href="#" class="card-link">Contact</a>
-    <a href="#" class="card-link">Learn More</a>
-  </div>
-</div>
-<div class="card" style="width: 18rem;">
-  <img src="https://picsum.photos/800" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Name</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">Specialties</li>
-  </ul>
-  <div class="card-body">
-    <a href="#" class="card-link">Contact</a>
-    <a href="#" class="card-link">Learn More</a>
-  </div>
-</div>
-</div>
+<div class="container">
+  <div class="row">
+
+    <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
+       <div class="mdc-card__primary-action" tabindex="0">
+         <div class="mdc-card__media mdc-card__media--square kate">
+        </div>
+        <div class="card-title mdc-typography mdc-typography--headline6">
+          Kate
+        </div>
+          <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, LGBTQ+, Career, Family
+          </div>
+        </div>
+          <div class="mdc-card__actions">
+            <div class="mdc-card__action-buttons">
+              <!-- <i class="material-icons outlined">
+              info
+              </i> -->
+              <button class="mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+
+              <button class="mdc-button mdc-card__action mdc-card__action--button">Contact</button>
+            </div>
+          </div>
+    </div>
+
+    <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
+       <div class="mdc-card__primary-action" tabindex="0">
+         <div class="mdc-card__media mdc-card__media--square alana">
+      </div>
+            <h2 class="card-title mdc-typography mdc-typography--headline6">Alana</h2>
+                <div class="card-body mdc-typography mdc-typography--body2">Things about the therapist including specialties.
+                </div>
+       </div>
+    </div>
+
+    <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
+      <div class="mdc-card__primary-action" tabindex="0">
+        <div class="mdc-card__media mdc-card__media--square kate"></div>
+      </div>
+    </div>
+
+    <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
+      <div class="mdc-card__primary-action">
+        <div class="mdc-card__media mdc-card__media--square alana"></div>
+      </div>
+    </div>
 
   </div>
 </div>
