--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@ layout: default
 ---
 <!-- Page Content -->
   <div class="row-fluid hero" id="page-top">
+    <div>
+        <i class="fas fa-chevron-down fa-2x"></i>
+      </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <h2 class="hero-text"><a href="#treatment" class="page-scroll">Statement about practice</a></h2>
+        <h2 class="hero-text"><a href="#treatment" class="page-scroll">Statement about practice goes here </a></h2>
       </div>
     <div class="hero-overlay">
     </div>
