add gh pages branch

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -15,13 +15,12 @@ permalink: /about/
   <div class="row">
 
     <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
-        <div class="card-title mdc-typography mdc-typography--headline6">
-          Kate
-        </div>
-       <div class="mdc-card__primary-action" tabindex="0">
+       <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square kate">
         </div>
-
+        <div class="mdc-card__media-content">
+          <h1 class="my-card-title">Kate</h1>
+        </div>
           <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, LGBTQ+, Career, Family
           </div>
         </div>
@@ -30,32 +29,52 @@ permalink: /about/
               <!-- <i class="material-icons outlined">
               info
               </i> -->
-              <button class="mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
-
-              <button class="mdc-button mdc-card__action mdc-card__action--button">Contact</button>
+              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Contact</button>
             </div>
           </div>
     </div>
+
     <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
-       <div class="mdc-card__primary-action" tabindex="0">
+       <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square alana">
-      </div>
-            <h2 class="card-title mdc-typography mdc-typography--headline6">Alana</h2>
-                <div class="card-body mdc-typography mdc-typography--body2">Things about the therapist including specialties.
-                </div>
-       </div>
+        </div>
+        <div class="mdc-card__media-content">
+          <h1 class="my-card-title">Alana</h1>
+        </div>
+          <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, LGBTQ+, Career, Family
+          </div>
+        </div>
+          <div class="mdc-card__actions">
+            <div class="mdc-card__action-buttons">
+              <!-- <i class="material-icons outlined">
+              info
+              </i> -->
+              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Contact</button>
+            </div>
+          </div>
     </div>
 
     <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
-      <div class="mdc-card__primary-action" tabindex="0">
-        <div class="mdc-card__media mdc-card__media--square kate"></div>
-      </div>
-    </div>
-
-    <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
-      <div class="mdc-card__primary-action">
-        <div class="mdc-card__media mdc-card__media--square alana"></div>
-      </div>
+       <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
+         <div class="mdc-card__media mdc-card__media--square gwenn">
+        </div>
+        <div class="mdc-card__media-content">
+          <h1 class="my-card-title">Gwenn</h1>
+        </div>
+          <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, LGBTQ+, Career, Family
+          </div>
+        </div>
+          <div class="mdc-card__actions">
+            <div class="mdc-card__action-buttons">
+              <!-- <i class="material-icons outlined">
+              info
+              </i> -->
+              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Contact</button>
+            </div>
+          </div>
     </div>
 
   </div>
