--- a/_pages/gwenn.html
+++ b/_pages/gwenn.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-permalink: /services/
+permalink: /gwenn/
 ---
 <div class="container-fluid card-container">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h2>Services</h2>
+    <h2>Gwenn</h2>
   </div></div>
   <div class="row-fluid">
 
