fix services.html display

--- a/_pages/alana.html
+++ b/_pages/alana.html
@@ -2,12 +2,12 @@
 layout: default
 permalink: /alana/
 ---
-<div class="container-fluid card-container">
-<div class="row-fluid header">
+<div class="container-fluid">
+<div class="row header">
   <div class="col-sm-12">
-    <h2>Alana</h2>
+    <h2 class="page-header">Alana</h2>
   </div></div>
-  <div class="row-fluid">
+  <div class="row">
 
 
 
