--- a/_pages/gwenn.html
+++ b/_pages/gwenn.html
@@ -5,7 +5,7 @@ permalink: /gwenn/
 <div class="container-fluid card-container">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h2>Gwenn</h2>
+    <h2 class="page-header">Gwenn</h2>
   </div></div>
   <div class="row-fluid">
 
