--- a/_pages/services.html
+++ b/_pages/services.html
@@ -2,15 +2,36 @@
 layout: default
 permalink: /services/
 ---
-<div class="container-fluid card-container">
-<div class="row-fluid header">
+<div class="container">
+<div class="row header">
   <div class="col-sm-12">
-    <h2>Services</h2>
+    <h2 class="page-header">Services</h2>
   </div></div>
-  <div class="row-fluid">
 
-
-
-
+  <div class="row section">
+    <div class="col-lg-4 col-md-4 col-sm-12"><img src="https://picsum.photos/400" class="img-fluid" alt=""></div>
+    <div class="col-lg-8 col-md-8 col-sm-12">
+      <h3>Individuals</h3>
+      <p class="info">Cupcake ipsum dolor sit. Amet powder bear claw sweet jujubes dragée carrot cake cake. Danish sweet jelly beans sweet. Sweet dessert halvah. Cupcake tart jelly cotton candy icing danish dessert sugar plum sweet. Jujubes tootsie roll liquorice. Tart chocolate bar marzipan. Chocolate cake wafer candy canes chocolate cake macaroon pudding chocolate. Marshmallow marzipan sesame snaps pudding cupcake chupa chups. Jelly-o wafer bear claw jujubes pudding chocolate macaroon caramels. Jelly beans dessert muffin. Muffin lemon drops marshmallow chupa chups sugar plum. Bear claw sugar plum jelly ice cream jujubes croissant candy soufflé dessert.</p>
+    </div>
   </div>
+
+    <div class="row section">
+      <div class="col-lg-8 col-md-8 col-sm-12">
+      <h3>Couples</h3>
+      <p class="info">Cupcake ipsum dolor sit. Amet powder bear claw sweet jujubes dragée carrot cake cake. Danish sweet jelly beans sweet. Sweet dessert halvah. Cupcake tart jelly cotton candy icing danish dessert sugar plum sweet. Jujubes tootsie roll liquorice. Tart chocolate bar marzipan. Chocolate cake wafer candy canes chocolate cake macaroon pudding chocolate. Marshmallow marzipan sesame snaps pudding cupcake chupa chups. Jelly-o wafer bear claw jujubes pudding chocolate macaroon caramels. Jelly beans dessert muffin. Muffin lemon drops marshmallow chupa chups sugar plum. Bear claw sugar plum jelly ice cream jujubes croissant candy soufflé dessert.</p>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-12"><img src="https://picsum.photos/400" class="img-fluid" alt=""></div>
+    </div>
+
+    <div class="row section">
+      <div class="col-lg-4 col-md-4 col-sm-12"><img src="https://picsum.photos/400" class="img-fluid" alt=""></div>
+      <div class="col-lg-8 col-md-8 col-sm-12">
+        <h3>Family</h3>
+        <p class="info">Cupcake ipsum dolor sit. Amet powder bear claw sweet jujubes dragée carrot cake cake. Danish sweet jelly beans sweet. Sweet dessert halvah. Cupcake tart jelly cotton candy icing danish dessert sugar plum sweet. Jujubes tootsie roll liquorice. Tart chocolate bar marzipan. Chocolate cake wafer candy canes chocolate cake macaroon pudding chocolate. Marshmallow marzipan sesame snaps pudding cupcake chupa chups. Jelly-o wafer bear claw jujubes pudding chocolate macaroon caramels. Jelly beans dessert muffin. Muffin lemon drops marshmallow chupa chups sugar plum. Bear claw sugar plum jelly ice cream jujubes croissant candy soufflé dessert.</p>
+      </div>
+    </div>
+
+
+
   </div>
