--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,7 +7,7 @@ permalink: /about/
 <div class="container">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h2>Who We Are</h2>
+    <h2 class="page-header">Who We Are</h2>
   </div>
 </div>
 </div>
@@ -17,6 +17,7 @@ permalink: /about/
     <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square kate">
+           <a class="media-link" href="{% link _pages/kate.html %}"></a>
         </div>
         <div class="mdc-card__media-content">
           <h1 class="my-card-title">Kate</h1>
@@ -26,11 +27,8 @@ permalink: /about/
         </div>
           <div class="mdc-card__actions">
             <div class="mdc-card__action-buttons">
-              <!-- <i class="material-icons outlined">
-              info
-              </i> -->
-              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
-              <button class="my-button mdc-button mdc-card__action mdc-card__action--button">Contact</button>
+              <button class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              <button class="my-ripple mdc-button mdc-card__action mdc-card__action--button">Contact</button>
             </div>
           </div>
     </div>
@@ -38,6 +36,7 @@ permalink: /about/
     <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square alana">
+           <a class="media-link" href="{% link _pages/alana.html %}"></a>
         </div>
         <div class="mdc-card__media-content">
           <h1 class="my-card-title">Alana</h1>
@@ -59,6 +58,7 @@ permalink: /about/
     <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square gwenn">
+           <a class="media-link" href="{% link _pages/gwenn.html %}"></a>
         </div>
         <div class="mdc-card__media-content">
           <h1 class="my-card-title">Gwenn</h1>
