--- a/_pages/kate.html
+++ b/_pages/kate.html
@@ -5,7 +5,7 @@ permalink: /kate/
 <div class="container-fluid card-container">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h2>Kate</h2>
+    <h2 class="page-header">Kate</h2>
   </div></div>
   <div class="row-fluid">
 
