add copy to individual pages

--- a/_pages/gwenn.html
+++ b/_pages/gwenn.html
@@ -7,7 +7,18 @@ permalink: /gwenn/
   <div class="col-sm-12">
     <h2 class="page-header">Gwenn</h2>
   </div></div>
-  <div class="row-fluid">
+  <div class="row">
+    <div class="col info">
+      <p>
+      Considering therapy? If you are thinking about taking this important step, I invite you to call me. I work with patients who are looking to make meaningful growth in their lives.  During our sessions, we will work together on your most pressing issues.  I have experience working with individuals dealing with anxiety, depression, low self-esteem, life stressors and transitions.  If you are parents struggling with family dynamics or children, I can help. If you are in your 30s and 40s, are struggling with issues such as changing careers or the loss of a parent, please reach out.
+      </p>
+      <p>
+      I earned my Bachelor of Arts in psychology at the University of Richmond in Virginia, and my Master of Science in Social Work at Columbia University in New York.  With over 18 years of post-graduate experience, I have worked with a wide variety of patients with a host of issues; some of these include children and adults in Family Court, people adopting children from abroad, and children in schools. I am now seeing patients in a group practice privately. My patients are teens, adults and families.
+      </p>
+      <p>
+      I am caring, thoughtful, empathetic and direct.  I have evening hours available for those who work during the day. The work we can do together can help make the difference you're looking for.
+      </p>
+    </div>
 
 
 
