--- a/_pages/kate.html
+++ b/_pages/kate.html
@@ -7,9 +7,25 @@ permalink: /kate/
   <div class="col-sm-12">
     <h2 class="page-header">Kate</h2>
   </div></div>
-  <div class="row-fluid">
+  <div class="row">
+    <div class="col info">
+      <p>
+      I earned an MSEd in Mental Health Counseling from Fordham University and have experience working in private practice as well as nonprofit mental health agencies. I primarily see clients for individual sessions; additionally, I run process groups and see clients for couples and family sessions.
+    </p>
+    <p>
+      I utilize an integrative approach drawing from psychodynamic, cognitive behavioral, strengths-based and mindfulness practices, tailoring to and honoring the unique needs of each client. In my practice, I work to establish an environment in which you feel safe and heard. I utilize an active and collaborative approach, allowing us to work together to better understand and overcome the obstacles standing in your way of reaching your full potential.
+    </p>
+    <p>
+    My goal in working together will be to provide a safe space for us to explore recurring patterns and unconscious influences that become obstacles in living truly fulfilling lives. Influences out of our awareness, such as unresolved traumas from our past, contribute to the difficulties we face in the present. In our work together, we will explore how these influences lead us to repeat the same maladaptive behaviors and patterns, often resulting in unsatisfying relationships with ourselves and with others. We will also consider the environmental, societal, and interpersonal influences that impact our thoughts and actions.
+    </p>
+    <p>
+    I appreciate that working on oneself can be at times difficult and open up vulnerabilities that can be challenging to navigate. And that is why I’m here -- to help you process the difficulties that arise, ultimately learning how to grow from your personal struggles and developing greater understanding and acceptance in the process.
+    </p>
+    <p>
+    I primarily work with young adults struggling with depression, anxiety, trauma, sexuality, and identity, and I work with many folks who identify as LGBTQAI. In addition to seeing individuals, I work with couples and families regarding adjustment issues and interpersonal conflicts, including relational difficulties and parenting concerns. I also offer group therapy services, which will typically meet weekly on Saturdays.
+    </p>
 
-
+    </div>
 
 
   </div>
