--- a/_pages/alana.html
+++ b/_pages/alana.html
@@ -8,7 +8,25 @@ permalink: /alana/
     <h2 class="page-header">Alana</h2>
   </div></div>
   <div class="row">
-
+<div class="col info">
+  <p>
+    Welcome! I respect the courage that it takes to enter into therapy, as well as the feelings of accomplishment and vulnerability that can arise. Our work will be non-judgmental, active and collaborative. In our sessions, we will work to pinpoint goals, to name, understand, accept, and weather the emotions you experience, to recognize those values that are most meaningful to you, to identify and implement adaptive ways of addressing concerns, achieving goals, and navigating life transitions, and to understand the influence of past experience on present ways of thinking and relating to others.
+    </p>
+    <p>
+    I work with individuals experiencing depression, anxiety, OCD, career, life-role, and relationship transitions as well as those seeking emotional support in dealing with medical diagnoses, loss, and trauma. I work with patients to uncover and address their core beliefs, emotions, behaviors, and thoughts. This gives patients not only the tools to cope with difficult situations, but also agency in their lives and the opportunity to thrive.
+    </p>
+    <p>
+    Additionally, I have received training in women’s mental health and maternal mental health. I provide effective therapeutic care to clients experiencing premenstrual dysphoric disorder, perinatal and postpartum depression, anxiety, and OCD, as well as those coping with infertility and loss. I collaborate with patients to address cognitions and goals around the decision to have children, and relationship transitions as they become parents.
+    </p>
+    <p>
+    I have worked successfully with adults and young adults experiencing depression, anxiety, and perinatal mood and anxiety disorders. I work from an LGBTQIA+ affirming perspective to provide support for individuals of all identities and family constellations. Additionally, I have an interest in work with individuals exploring identity and individuation.
+    </p>
+    <p>
+    I earned my Bachelor of Arts in Psychology from Barnard College, Columbia University and my Master of Arts in Mental Health Counseling from Brooklyn College, City University of New York. I completed my clinical training at the Brooklyn College Personal Counseling Center and the Seleni Institute.
+    I work utilizing an integrative approach, incorporating techniques from cognitive behavioral therapy, acceptance and commitment therapy, dialectical behavior therapy, mindfulness-based approaches, and psychodynamic psychotherapy, based your individualized needs and goals.
+    I look forward to meeting you and to our work together.
+  </p>
+</div>
 
 
 
