work on treatments

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -14,6 +14,25 @@ permalink: /about/
 <div class="container">
   <div class="row">
 
+        <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
+       <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
+         <div class="mdc-card__media mdc-card__media--square kate">
+           <a class="media-link" href="{% link _pages/sary.html %}"></a>
+        </div>
+        <div class="mdc-card__media-content">
+          <h1 class="my-card-title">Sary</h1>
+        </div>
+          <div class="card-body mdc-typography mdc-typography--body3">Anxiety, Depression, LGBTQ+, Career, Family
+          </div>
+        </div>
+          <div class="mdc-card__actions">
+            <div class="mdc-card__action-buttons">
+              <button class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button>
+              <button class="my-ripple mdc-button mdc-card__action mdc-card__action--button">Contact</button>
+            </div>
+          </div>
+    </div>
+
     <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square kate">
