--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <!-- Page Content -->
   <div class="row-fluid hero" id="page-top">
     <div>
-      <a href="#treatment" class="page-scroll far fa-arrow-alt-circle-down fa-2x"></a>  
+      <a href="#treatment" class="page-scroll fas fa-angle-double-down fa-2x hero-arrow"></a>  
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
         <h2 class="hero-text"><a href="#treatment" class="page-scroll">Statement about practice goes here </a></h2>
