--- a/_pages/kate.html
+++ b/_pages/kate.html
@@ -5,9 +5,16 @@ permalink: /kate/
 <div class="container-fluid card-container">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h2 class="page-header">Kate</h2>
+    <h2 class="page-header text-uppercase">Kate Blemler, MHC-LP</h2>
   </div></div>
   <div class="row">
+    <div class="col">
+      <img src="/assets/img/kate.jpeg" alt="Kate" class="img-fluid">
+      <div>
+        <p>Specialties</p><br />
+        <p>Contact</p>
+      </div>
+    </div>
     <div class="col info">
       <p>
       I earned an MSEd in Mental Health Counseling from Fordham University and have experience working in private practice as well as nonprofit mental health agencies. I primarily see clients for individual sessions; additionally, I run process groups and see clients for couples and family sessions.
