--- a/_pages/about.html
+++ b/_pages/about.html
@@ -16,7 +16,7 @@ permalink: /about/
 
         <div class="mdc-card col-sm-12 col-md-4 col-lg-3 team">
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
-         <div class="mdc-card__media mdc-card__media--square kate">
+         <div class="mdc-card__media mdc-card__media--square sary">
            <a class="media-link" href="{% link _pages/sary.html %}"></a>
         </div>
         <div class="mdc-card__media-content">
