--- a/_pages/gwenn.html
+++ b/_pages/gwenn.html
@@ -8,6 +8,9 @@ permalink: /gwenn/
     <h2 class="page-header">Gwenn</h2>
   </div></div>
   <div class="row">
+    <div class="col">
+      <img src="/assets/img/gwenn.jpg" alt="Gwenn" class="img-fluid">
+    </div>
     <div class="col info">
       <p>
       Considering therapy? If you are thinking about taking this important step, I invite you to call me. I work with patients who are looking to make meaningful growth in their lives.  During our sessions, we will work together on your most pressing issues.  I have experience working with individuals dealing with anxiety, depression, low self-esteem, life stressors and transitions.  If you are parents struggling with family dynamics or children, I can help. If you are in your 30s and 40s, are struggling with issues such as changing careers or the loss of a parent, please reach out.
