change formatting individual about pages

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,7 +7,7 @@ permalink: /about/
 <div class="container">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h2 class="page-header">Who We Are</h2>
+    <h2 class="page-header text-uppercase">Who We Are</h2>
   </div>
 </div>
 </div>
