--- a/_pages/alana.html
+++ b/_pages/alana.html
@@ -5,13 +5,19 @@ permalink: /alana/
 <div class="container-fluid">
 <div class="row header">
   <div class="col-sm-12">
-    <h2 class="page-header">Alana</h2>
+    <h2 class="page-header text-uppercase">Alana</h2>
   </div></div>
   <div class="row">
-    <div class="col">
+    <div class="col-lg-4 col-md-4 col-sm-12">
       <img src="/assets/img/alana.jpeg" alt="Alana" class="img-fluid">
+      <div class="col caption-btn">
+        Contact: something@gmail.com
+      </div>
+      <div class="col caption-btn">
+          Specialties: Anxiety, Depression, PTSD
+      </div>
     </div>
-<div class="col info">
+<div class="col-lg-8 col-md-8 col-sm-12 info">
   <p>
     Welcome! I respect the courage that it takes to enter into therapy, as well as the feelings of accomplishment and vulnerability that can arise. Our work will be non-judgmental, active and collaborative. In our sessions, we will work to pinpoint goals, to name, understand, accept, and weather the emotions you experience, to recognize those values that are most meaningful to you, to identify and implement adaptive ways of addressing concerns, achieving goals, and navigating life transitions, and to understand the influence of past experience on present ways of thinking and relating to others.
     </p>
