--- a/_pages/kate.html
+++ b/_pages/kate.html
@@ -8,14 +8,16 @@ permalink: /kate/
     <h2 class="page-header text-uppercase">Kate Blemler, MHC-LP</h2>
   </div></div>
   <div class="row">
-    <div class="col">
+    <div class="col-lg-4 col-md-4 col-sm-12">
       <img src="/assets/img/kate.jpeg" alt="Kate" class="img-fluid">
-      <div>
-        <p>Specialties</p><br />
-        <p>Contact</p>
+      <div class="col caption-btn">
+        Contact: something@gmail.com
+      </div>
+      <div class="col caption-btn">
+          Specialties: Anxiety, Depression, PTSD
       </div>
     </div>
-    <div class="col info">
+    <div class="col-lg-8 col-md-8 col-lg-12 info">
       <p>
       I earned an MSEd in Mental Health Counseling from Fordham University and have experience working in private practice as well as nonprofit mental health agencies. I primarily see clients for individual sessions; additionally, I run process groups and see clients for couples and family sessions.
     </p>
