--- a/_pages/services.html
+++ b/_pages/services.html
@@ -5,7 +5,7 @@ permalink: /services/
 <div class="container">
 <div class="row header">
   <div class="col-sm-12">
-    <h2 class="page-header">Services</h2>
+    <h2 class="page-header text-uppercase">Services</h2>
   </div></div>
 
   <div class="row section">
