--- a/_pages/sary.html
+++ b/_pages/sary.html
@@ -5,13 +5,19 @@ permalink: /sary/
 <div class="container-fluid card-container">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h2 class="page-header">Sary Rottenberg, LMHC</h2>
+    <h2 class="page-header text-uppercase">Sary Rottenberg, LMHC</h2>
   </div></div>
   <div class="row">
-    <div class="col">
+    <div class="col-lg-4 col-md-4 col-sm-12">
       <img src="/assets/img/sary.jpg" alt="Sary" class="img-fluid">
+      <div class="col caption-btn">
+        Contact: something@gmail.com
+      </div>
+      <div class="col caption-btn">
+          Specialties: Anxiety, Depression, PTSD
+      </div>
     </div>
-    <div class="col info">
+    <div class="col-lg-8 col-md-8 col-sm-12 info">
       <p>
       When you choose to begin therapy, a match is important to growth and change. I am direct, warm and will help you confront some of the more challenging aspects of yourself. My goal is to always to facilitate living the best life you can. Keeping that in mind, therapy can be demanding at times, and requires a lot of patience with yourself and with the work. We will learn together how to communicate about what is happening in therapy beyond the words that are used.
       </p>
