--- a/_pages/alana.html
+++ b/_pages/alana.html
@@ -9,12 +9,12 @@ permalink: /alana/
   </div></div>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12">
-      <img src="/assets/img/alana.jpeg" alt="Alana" class="img-fluid">
+      <img src="/assets/img/alana.jpeg" alt="Alana portrait" class="img-fluid">
       <div class="col caption-btn">
         Contact: something@gmail.com
       </div>
       <div class="col caption-btn">
-          Specialties: Anxiety, Depression, PTSD
+        Specialties: Anxiety, Depression, PTSD
       </div>
     </div>
 <div class="col-lg-8 col-md-8 col-sm-12 info">
