--- a/_pages/gwenn.html
+++ b/_pages/gwenn.html
@@ -9,7 +9,7 @@ permalink: /gwenn/
   </div></div>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12">
-      <img src="/assets/img/gwenn.jpg" alt="Gwenn" class="img-fluid">
+      <img src="/assets/img/gwenn.jpg" alt="Gwenn portrait" class="img-fluid">
       <div class="col caption-btn">
         Contact: something@gmail.com
       </div>
