--- a/_pages/kate.html
+++ b/_pages/kate.html
@@ -9,7 +9,7 @@ permalink: /kate/
   </div></div>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12">
-      <img src="/assets/img/kate.jpeg" alt="Kate" class="img-fluid">
+      <img src="/assets/img/kate.jpeg" alt="Kate portrait" class="img-fluid">
       <div class="col caption-btn">
         Contact: something@gmail.com
       </div>
@@ -17,7 +17,7 @@ permalink: /kate/
           Specialties: Anxiety, Depression, PTSD
       </div>
     </div>
-    <div class="col-lg-8 col-md-8 col-lg-12 info">
+    <div class="col-lg-8 col-md-8 col-sm-12 info">
       <p>
       I earned an MSEd in Mental Health Counseling from Fordham University and have experience working in private practice as well as nonprofit mental health agencies. I primarily see clients for individual sessions; additionally, I run process groups and see clients for couples and family sessions.
     </p>
