--- a/_pages/sary.html
+++ b/_pages/sary.html
@@ -9,7 +9,7 @@ permalink: /sary/
   </div></div>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12">
-      <img src="/assets/img/sary.jpg" alt="Sary" class="img-fluid">
+      <img src="/assets/img/sary.jpg" alt="Sary portrait" class="img-fluid">
       <div class="col caption-btn">
         Contact: something@gmail.com
       </div>
