--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 layout: default
 ---
 <!-- Page Content -->
+<header>
   <div class="row-fluid hero" id="page-top">
     <div>
-      <a href="#treatment" class="page-scroll fas fa-angle-double-down fa-2x hero-arrow"></a>  
+      <a href="#treatment" class="page-scroll fas fa-angle-double-down fa-2x hero-arrow"></a>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
         <h2 class="hero-text"><a href="#treatment" class="page-scroll">Statement about practice goes here </a></h2>
@@ -12,7 +13,7 @@ layout: default
     <div class="hero-overlay">
     </div>
   </div>
-
+</header>
   {% include treatments.html %}
 
   {% include footer.html %}
