--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -17,14 +17,14 @@ permalink: /contact/
         <!-- Grid column -->
         <div class="col-md-6 col-sm-12">
           <div class="md-form form-group">
-            <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+            <input type="text" class="form-control" id="name" placeholder="Name" name="name" autocomplete="name">
             <label for="name">Name</label>
           </div>
         </div>
         <!-- Grid column -->
         <div class="col-md-6 col-sm-12">
           <div class="md-form form-group">
-            <input type="email" class="form-control" id="email" placeholder="Email" name="_replyto">
+            <input type="email" class="form-control" id="email" placeholder="Email" name="_replyto" autocomplete="email">
             <label for="email">Email</label>
           </div>
         </div>
